# tele-trans

./: pyproject.toml
scripts/: babel_compile.sh  babel_extract.sh  babel_init.sh  babel_update.sh
tele_trans/: __main__.py  database.py  exceptions.py  models.py  schemas.py
tele_trans/locales/en/LC_MESSAGES/: messages.po
tele_trans/routers/: register.py
tests/: test_database.py  test_models.py  test_schemas.py
